fix - user icon disappearing on small nav (when scrolling)

--- a/capstone/static/css/scss/_nav.scss
+++ b/capstone/static/css/scss/_nav.scss
@@ -88,6 +88,7 @@
     #nav-account {
       .user-account-img {
         margin-top: 10px;
+        width: 20px;
       }
       .x-small {
         display: none;
